[package]
name = "s3"
version = "0.1.0"
edition = "2021"
authors = ["Michael Salib <msalib@alum.mit.edu>"]
license = "Apache-2.0"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.1"
aws-smithy-types = "0.55.0"
aws-types = "0.55.0"
bat = { version = "0.23", default-features = false, features = ["regex-fancy", "paging"] }
futures = "0.3.28"
humansize = "2.1.3"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["rustls-tls"] }
serde_json = "1.0.95"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io", "io-util"] }
url = "2.3.1"
